--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "bootstrap": "^5.3.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router": "^5.3.4",
     "react-router-dom": "^5.2.0",
+    "react-toastify": "^11.0.2",
     "reactstrap": "^9.2.3"
   },
   "devDependencies": {
